api-gateway/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    app.kubernetes.io/managed-by: kubectl
